--- a/HackerMode/index.html
+++ b/HackerMode/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>snek</title>
+    <link rel="stylesheet" href="style7.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <script src="script9.js" defer></script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="game-details">
+        <span class="score">Score: 0</span>
+        <span class="lives">Lives: 3</span>
+        <span class="timer">Time: 60</span>
+      </div>
+      <div class="play-board"></div>
+      <div class="options">
+        <i data-key="Pause/Play" class="pause">Pause/Play</i>
+        <div data-key="Sequence" class="sequence"></div>
+      </div>
+      <div class="controls">
+        <i data-key="ArrowLeft" class="fa-solid fa-arrow-left-long"></i>
+        <i data-key="ArrowUp" class="fa-solid fa-arrow-up-long"></i>
+        <i data-key="ArrowRight" class="fa-solid fa-arrow-right-long"></i>
+        <i data-key="ArrowDown" class="fa-solid fa-arrow-down-long"></i>
+      </div>
+    </div>
+    <div class="wrapper2">
+      <div class="title">Leaderboard</div>
+      <div class="leaderboard">
+        <!--<div style="grid-row-start : 3; grid-column-start : 1">Hello 14</div>-->
+      </div>
+    </div>
+    
 
+  </body>
+</html>
